<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/transparent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:paddingStart="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry">

        <ImageView
            android:id="@+id/ivDocumentType"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:contentDescription="@string/info"
            android:src="@drawable/excel_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tvDocumentName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvDocumentName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="2dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/tvSize"
            app:layout_constraintStart_toEndOf="@+id/ivDocumentType"
            app:layout_constraintEnd_toStartOf="@id/ivMore"
            app:layout_constraintTop_toTopOf="@id/ivDocumentType"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/tvSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:text="@string/size_and_time"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="@+id/ivDocumentType"
            app:layout_constraintStart_toStartOf="@+id/tvDocumentName"
            app:layout_constraintTop_toBottomOf="@+id/tvDocumentName"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/tvTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:baselineAligned="false"
            android:text="@string/size_and_time"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="@+id/tvSize"
            app:layout_constraintStart_toEndOf="@+id/tvSize"
            app:layout_constraintTop_toTopOf="@+id/tvSize"
            tools:ignore="SmallSp" />

        <ImageView
            android:id="@+id/ivMore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_more"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>